<resources>
    <string name="app_name">eseVoltify</string>
    <string name="t1">Inserisci le canzoni</string>


    <string name="b1">Inserisci</string>
    <string name="b2">Invia</string>

    <string name="ed1">Titolo</string>
    <string name="ed2">Durata</string>
    <string name="ed3">Autore</string>
    <string name="ed4">Datacreazione</string>
    <string-array name="genere">
        <item>Indie</item>
        <item>Rock</item>
        <item>Metal</item>
        <item>Pop</item>
        <item>Rap</item>
        <item>Trap</item>
        <item>K-pop</item>
        <item>Country</item>
        <item>Punk</item>
    </string-array>
</resources>